--- a/reviews/templates/home.html
+++ b/reviews/templates/home.html
@@ -6,6 +6,12 @@
     <h1>Welcome to ImgRating</h1> <br>
     <p>The place where you can upload pictures and rate pictures by other users!</p> <br>
 
+    {% if cookie %}
+    <p> Hello {{cookie}}, you are logged in <p>
+    {% else %}
+    <p> You are not logged in <p>
+    {% endif %}
+
     <h5>Image of the day</h5> <br>
         <img src="{{ url_for('static', filename='uploads/cat.jpg') }}" class="img-fluid" alt="Image of the day">
     <br>
