--- a/reviews/templates/login.html
+++ b/reviews/templates/login.html
@@ -16,5 +16,11 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
         
+        {% if message %}
+        <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
+        
     </form>
 {% endblock %}
