--- a/reviews/templates/register.html
+++ b/reviews/templates/register.html
@@ -23,5 +23,13 @@
             <input type="password" class="form-control" id="password" name="Password Repeat" placeholder="Enter your password" required>
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
+        
+        <br>
+        {% if message %}
+        <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
     </form>
 {% endblock %}
+
