--- a/reviews/templates/feed.html
+++ b/reviews/templates/feed.html
@@ -10,33 +10,40 @@
                 <form method="GET" action="/feed" class="search-container">
                     <input type="text" name="Search_Button" class="form-control search-input" placeholder="Search for ">
                     <button class="btn btn-primary btn-spacing" type="submit">Search</button>
-
-                    {% if message %}
-                        <div class="alert alert-{{ category }}" role="alert">
-                            {{ message }}
-                        </div>
-                    {% endif %}
                 </form>
             </div>
         </div>
     </div>
 
-    {% for image in images %}
-        <li>
-            <a href="{{ url_for('view_image', image_id=image.id) }}">
-                <img src="{{ image.url }}" alt="Image ID {{ image.id }}" style="max-width: 150px;"/>
-            </a>
-            <!-- This is a comment 
-            <div>
-                Average Rating: 
-                {% if image.average_rating is not none %}
-                    {{ image.average_rating }}
-                {% else %}
-                    No ratings yet
-                {% endif %}
-            </div> -->
-        </li>
-    {% endfor %}
+    <h1>Image Feed</h1>
+    
+    <table class="image-table">
+        <thead>
+            <tr>
+                <th>Image ID</th>
+                <th>Image</th>
+                <th>Upload Date</th>
+                <th>Average Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for image in images %}
+                <tr>
+                    <td>{{ image.id }}</td>
+                    <td>
+                        <a href="{{ url_for('view_image', image_id=image.id) }}">
+                            <img src="{{ image.url }}" alt="{{ image.image_url }}" />
+                        </a>
+                    </td>
+                    <td>{{ image.upload_date }}</td>
+                    <td>
+                        {{ image.rating}}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 </ul>
 
 {% endblock %}
